[options]
requires_python = >=3.7, <4
install_requires =
    deprecated
    #RestrictedPython
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
dev =
    pylint
    pytest
    black
    tox
    check-manifest
    cloudpathlib
    pydantic

[metadata]
name = pytoolbox_jdo
description = A toolbox of useful small python utilities
url = https://github.com/jdonnerstag/pytoolbox_jdo
author = Juergen Donnerstag
author_email = juergen.donnerstag@gmail.com
keywords =
    python
    toolbox
    utilities
